--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="navlinks">
           <a href="/interior-ai/">Interior AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
+          <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
       </nav>
     </header>
@@ -82,6 +83,7 @@
         <div class="footlinks" aria-label="Footer links">
           <a href="/interior-ai/">Interior AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy Policy</a>
+          <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
       </footer>
     </main>
@@ -91,4 +93,3 @@
     </script>
   </body>
 </html>
-
