--- a/interior-ai/index.html
+++ b/interior-ai/index.html
@@ -23,6 +23,7 @@
         <div class="navlinks">
           <a href="/interior-ai/">Interior AI</a>
           <a href="/interior-ai/privacy-policy/">Privacy</a>
+          <a href="/interior-ai/terms-and-conditions/">Terms</a>
         </div>
       </nav>
     </header>
@@ -128,12 +129,20 @@
             Email <a href="mailto:support@9dogs.com">support@9dogs.com</a>.
           </div>
         </div>
+        <div class="mini" style="margin-top:10px">
+          <b>Where are the legal docs?</b>
+          <div class="muted">
+            Read the <a href="/interior-ai/privacy-policy/">Privacy Policy</a> and
+            <a href="/interior-ai/terms-and-conditions/">Terms &amp; Conditions</a>.
+          </div>
+        </div>
       </section>
 
       <footer>
         <div class="fine">© <span id="y"></span> 9dogs • <a href="/">Home</a></div>
         <div class="footlinks" aria-label="Footer links">
           <a href="/interior-ai/privacy-policy/">Privacy Policy</a>
+          <a href="/interior-ai/terms-and-conditions/">Terms</a>
           <a href="mailto:support@9dogs.com">Support</a>
         </div>
       </footer>
@@ -144,4 +153,3 @@
     </script>
   </body>
 </html>
-
